get activities issue
